--- a/custom.scss
+++ b/custom.scss
@@ -90,7 +90,7 @@ pre {
 }
 
 .reveal p.subtitle {
-    font-family: $font-family-monospace;
+    font-family: $font-family-sans-serif;
     font-size: 2.2em;
     color: $heading-color;
     margin-top: 0;
@@ -110,7 +110,7 @@ pre {
 .reveal h4, 
 .reveal h5, 
 .reveal h6 {
-    font-family: $font-family-monospace;
+    font-family: $font-family-sans-serif;
 }
 
 .reveal h1 {
